fix wedding, invation api
