# Wedding/Wedding.Model/DTO/CreateInvitationDTO.cs
@@ -5,8 +5,8 @@ namespace Wedding.Model.DTO;
 public class CreateInvitationDTO
 {
     public Guid InvitationId { get; set; }
-    public Guid WeddingId { get; set; }
-    public Guid TemplateId { get; set; }
+    public Guid? WeddingId { get; set; }
+    public Guid? TemplateId { get; set; }
     public string CustomerMessage { get; set; }
     public string CustomerTextColor { get; set; }
     public string ShareableLink { get; set; }
