# Wedding/Wedding.Model/DTO/InvitationDTO.cs
@@ -5,7 +5,7 @@ namespace Wedding.Model.DTO;
 public class InvitationDTO
 {
     public Guid InvitationId { get; set; }
-    public Guid WeddingId { get; set; }
+    public Guid? WeddingId { get; set; }
     public Guid? TemplateId { get; set; }
     public string CustomerMessage { get; set; }
     public string CustomerTextColor { get; set; }
