# Wedding/Wedding.Model/DTO/UpdateInvitationDTO.cs
@@ -4,7 +4,6 @@ namespace Wedding.Model.DTO;
 
 public class UpdateInvitationDTO
 {
-    public Guid InvitationId { get; set; }
     public Guid WeddingId { get; set; }
     public string TemplateId { get; set; }
     public string CustomerMessage { get; set; }
